<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_bg"
    android:paddingBottom="@dimen/default_padding_24dp" >

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/LabelStyleDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding_24dp"
        android:text="@string/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
        android:background="@color/line_gray"/>

    <TextView
        android:id="@+id/tvDialogMessage"
        style="@style/LabelStyleDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding_32dp"
        android:text="@string/message"
        app:layout_constraintBottom_toTopOf="@id/btnPositive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPositive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_8dp"
        android:backgroundTint="@color/white"
        android:text="@string/ok_1"
        android:layout_marginStart="@dimen/default_padding_16dp"
        android:layout_marginEnd="@dimen/default_padding_16dp"
        app:cornerRadius="@dimen/default_padding_8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNegative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNegative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="@dimen/default_padding_16dp"
        android:layout_marginEnd="@dimen/default_padding_16dp"
        android:text="@string/cancel_1"
        app:cornerRadius="@dimen/default_padding_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>